# cosmic-ext-applet-workspace-icons

./: .gitignore  Cargo.toml  README.md  justfile
docs/: numbered-workspaces-changes.md
i18n/cs/: cosmic_ext_applet_workspace_icons.ftl
i18n/en/: cosmic_ext_applet_workspace_icons.ftl
packaging/io.github.crocodile.cosmic-ext-applet-workspace-icons/: cargo-sources.json  io.github.crocodile.cosmic-ext-applet-workspace-icons.json
resources/: io.github.crocodile.cosmic-ext-applet-workspace-icons.desktop  io.github.crocodile.cosmic-ext-applet-workspace-icons.metainfo.xml
src/: config.rs  localize.rs  main.rs  wayland.rs  wayland_subscription.rs
src/components/: app.rs
